[gd_scene load_steps=37 format=2]

[ext_resource path="res://juego_Botanica/personajes/personajePrincipal.gd" type="Script" id=1]
[ext_resource path="res://juego_Botanica/personajes/personajePrincipal.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tiles/_523Wo.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/TileSet_V1.png" type="Texture" id=4]
[ext_resource path="res://juego_Botanica/personajes/Planta.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/assets_Botanica/sol.png" type="Texture" id=6]
[ext_resource path="res://assets/assets_Botanica/580d7004e2271f8.png" type="Texture" id=7]
[ext_resource path="res://assets/assets_Botanica/nutrientes.png" type="Texture" id=8]
[ext_resource path="res://juego_Botanica/recursosBeneficiosos/Agua.tscn" type="PackedScene" id=9]
[ext_resource path="res://juego_Botanica/recursosBeneficiosos/Agua.gd" type="Script" id=10]
[ext_resource path="res://juego_Botanica/recursosBeneficiosos/Sol.tscn" type="PackedScene" id=11]
[ext_resource path="res://juego_Botanica/recursosBeneficiosos/Sol.gd" type="Script" id=12]
[ext_resource path="res://juego_Botanica/recursosBeneficiosos/Nutriente.tscn" type="PackedScene" id=13]
[ext_resource path="res://juego_Botanica/recursosBeneficiosos/Nutriente.gd" type="Script" id=14]
[ext_resource path="res://juego_Botanica/distractores/Fuego.tscn" type="PackedScene" id=15]
[ext_resource path="res://juego_Botanica/distractores/Basura.tscn" type="PackedScene" id=16]
[ext_resource path="res://juego_Botanica/distractores/Basura.gd" type="Script" id=17]
[ext_resource path="res://juego_Botanica/distractores/Plaga.tscn" type="PackedScene" id=18]
[ext_resource path="res://juego_Botanica/distractores/Plaga.gd" type="Script" id=19]
[ext_resource path="res://juego_Botanica/HUDs/HUD.tscn" type="PackedScene" id=20]
[ext_resource path="res://juego_Botanica/HUDs/PausaMenu.tscn" type="PackedScene" id=21]
[ext_resource path="res://juego_Botanica/GameManager.gd" type="Script" id=22]
[ext_resource path="res://fonts/Righteous-Regular.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://images/Continuar.png" type="Texture" id=24]
[ext_resource path="res://assets/PopUp.png" type="Texture" id=25]
[ext_resource path="res://images/menu_juego.png" type="Texture" id=26]
[ext_resource path="res://images/reintentar_juego.png" type="Texture" id=27]
[ext_resource path="res://assets/assets_Botanica/BotanicaSounds/level_Complete.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/assets_Botanica/BotanicaSounds/game_over.wav" type="AudioStream" id=29]
[ext_resource path="res://images/moneda2.png" type="Texture" id=30]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=3]
0/name = "_523Wo.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 608, 192, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "_523Wo.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 736, 320, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "TileSet_V1.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 224, 160, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 23 )

[node name="Botanica" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 22 )

[node name="personajePrincipal" parent="." groups=["Personaje"] instance=ExtResource( 2 )]
position = Vector2( 383, 259 )
scale = Vector2( 3.65444, 2.98893 )
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="personajePrincipal"]
position = Vector2( 8.20919, -1.0037 )

[node name="Bordes" type="TileMap" parent="."]
position = Vector2( -1, 7 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 131071, 0, 0, 65552, 0, 0, 196607, 0, 0, 131088, 0, 0, 262143, 0, 0, 196624, 0, 0, 327679, 0, 0, 262160, 0, 0, 393215, 0, 0, 327696, 0, 0, 458751, 0, 0, 393232, 0, 0, 524287, 0, 0, 458768, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0 )

[node name="Fondo" type="TileMap" parent="."]
position = Vector2( -1, -28 )
z_index = -5
tile_set = SubResource( 6 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0 )

[node name="Planta" parent="." groups=["Planta"] instance=ExtResource( 5 )]
pause_mode = 1
position = Vector2( 509, 255 )
collision_layer = 258
collision_mask = 258
linear_damp = 0.0
angular_damp = 100.0

[node name="Agua" parent="." groups=["Agua"] instance=ExtResource( 9 )]
position = Vector2( 275, -137 )
collision_layer = 260
collision_mask = 260
gravity_scale = 0.0
script = ExtResource( 10 )

[node name="Sol" parent="." instance=ExtResource( 11 )]
position = Vector2( 174, -134 )
collision_layer = 8
collision_mask = 8
gravity_scale = 0.0
script = ExtResource( 12 )

[node name="Nutriente" parent="." instance=ExtResource( 13 )]
position = Vector2( 80, -138 )
collision_layer = 16
collision_mask = 16
gravity_scale = 0.0
script = ExtResource( 14 )

[node name="Fuego" parent="." instance=ExtResource( 15 )]
position = Vector2( 791, -143 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0

[node name="Basura" parent="." instance=ExtResource( 16 )]
position = Vector2( 898, -138 )
mode = 1
script = ExtResource( 17 )

[node name="Plaga" parent="." instance=ExtResource( 18 )]
position = Vector2( 998, -141 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 19 )

[node name="HUD" type="Control" parent="."]
margin_left = -1.0
margin_top = 524.0
margin_right = 1022.0
margin_bottom = 599.0

[node name="Fondo" type="TileMap" parent="HUD"]
position = Vector2( 0, 12 )
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Agua" type="TextureRect" parent="HUD"]
anchor_right = 0.541
margin_left = 51.0
margin_top = -5.0
margin_right = -342.443
margin_bottom = 175.0
rect_scale = Vector2( 0.3, 0.3 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 7 )
stretch_mode = 5

[node name="Agua_Progress" type="ProgressBar" parent="HUD"]
margin_left = 105.0
margin_top = 9.0
margin_right = 271.0
margin_bottom = 43.0
value = 20.0

[node name="Sol" type="TextureRect" parent="HUD"]
margin_left = 394.0
margin_top = 6.0
margin_right = 619.0
margin_bottom = 231.0
rect_min_size = Vector2( 0.3, 0.3 )
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Sol_Progress" type="ProgressBar" parent="HUD"]
margin_left = 453.0
margin_top = 11.0
margin_right = 619.0
margin_bottom = 45.0
value = 20.0

[node name="Nutrientes" type="TextureRect" parent="HUD"]
margin_left = 726.0
margin_top = -2.0
margin_right = 1019.0
margin_bottom = 344.0
rect_min_size = Vector2( 0.3, 0.3 )
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 8 )

[node name="Nutrientes_Progress" type="ProgressBar" parent="HUD"]
margin_left = 780.0
margin_top = 9.0
margin_right = 946.0
margin_bottom = 43.0
value = 20.0

[node name="Decrementar" type="Timer" parent="."]
wait_time = 15.0

[node name="Info" parent="." instance=ExtResource( 20 )]
pause_mode = 2
margin_left = 23.0
margin_top = 3.0
margin_right = 23.0
margin_bottom = 3.0

[node name="PausaMenu" parent="." instance=ExtResource( 21 )]
pause_mode = 2
margin_left = -15.0
margin_top = 26.0
margin_right = -25.0
margin_bottom = 448.0

[node name="LevelComplete" type="TextureRect" parent="."]
pause_mode = 2
visible = false
margin_left = 315.0
margin_top = 115.0
margin_right = 715.0
margin_bottom = 439.0
texture = ExtResource( 25 )
expand = true

[node name="Label" type="Label" parent="LevelComplete"]
anchor_left = 0.217
anchor_top = 0.182
anchor_right = 0.797
anchor_bottom = 0.373
margin_left = 0.199997
margin_top = 0.0319977
margin_right = 0.199982
margin_bottom = 0.147995
custom_fonts/font = SubResource( 7 )
text = "Nivel Completo!"

[node name="TextureButton" type="TextureButton" parent="LevelComplete"]
anchor_left = 0.312
anchor_top = 0.509
anchor_right = 0.702
anchor_bottom = 0.75
margin_left = -5.8
margin_top = 0.0839996
margin_right = 0.199982
margin_bottom = -3.05176e-05
texture_normal = ExtResource( 24 )
expand = true

[node name="Label2" type="Label" parent="LevelComplete"]
anchor_left = 0.217
anchor_top = 0.182
anchor_right = 0.797
anchor_bottom = 0.373
margin_left = 18.2
margin_top = 56.032
margin_right = -24.8
margin_bottom = 44.148
custom_fonts/font = SubResource( 7 )
text = "+20 puntos"

[node name="TextureRect" type="TextureRect" parent="LevelComplete"]
anchor_left = 0.662
anchor_top = 0.318
anchor_right = 0.832
anchor_bottom = 0.528
margin_left = 0.199982
margin_top = -0.0320053
margin_right = 0.199982
margin_bottom = -0.0720062
texture = ExtResource( 30 )

[node name="GameComplete" type="TextureRect" parent="."]
pause_mode = 2
visible = false
margin_left = 315.0
margin_top = 115.0
margin_right = 715.0
margin_bottom = 439.0
texture = ExtResource( 25 )
expand = true

[node name="Label" type="Label" parent="GameComplete"]
anchor_left = 0.217
anchor_top = 0.182
anchor_right = 0.797
anchor_bottom = 0.373
margin_left = 0.199997
margin_top = 0.0319977
margin_right = 0.199982
margin_bottom = 0.147995
custom_fonts/font = SubResource( 7 )
text = "Juego Completo!"

[node name="VolverAlMenu" type="TextureButton" parent="GameComplete"]
anchor_left = 0.312
anchor_top = 0.404
anchor_right = 0.717
anchor_bottom = 0.645
margin_left = 0.199997
margin_top = 0.103989
margin_right = 0.200012
margin_bottom = 0.019989
texture_normal = ExtResource( 26 )
expand = true

[node name="GameOver" type="TextureRect" parent="."]
pause_mode = 2
visible = false
margin_left = 315.0
margin_top = 115.0
margin_right = 715.0
margin_bottom = 439.0
texture = ExtResource( 25 )
expand = true

[node name="Label" type="Label" parent="GameOver"]
anchor_left = 0.217
anchor_top = 0.182
anchor_right = 0.797
anchor_bottom = 0.373
margin_left = -24.8
margin_top = 0.0319977
margin_right = 45.2
margin_bottom = 0.147995
custom_fonts/font = SubResource( 7 )
text = "Oh no! Haz Perdido!"

[node name="Retry" type="TextureButton" parent="GameOver"]
anchor_left = 0.312
anchor_top = 0.404
anchor_right = 0.717
anchor_bottom = 0.645
margin_left = 0.199997
margin_top = 0.103989
margin_right = 0.200012
margin_bottom = 0.019989
texture_normal = ExtResource( 27 )
expand = true

[node name="GameOver2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = -0.469

[node name="LevelComplete2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
volume_db = -0.469

[node name="Validador" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Decrementar" to="." method="_on_Decrementar_timeout"]
[connection signal="pressed" from="LevelComplete/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="GameComplete/VolverAlMenu" to="." method="_on_VolverAlMenu_pressed"]
[connection signal="pressed" from="GameOver/Retry" to="." method="_on_Retry_pressed"]
[connection signal="timeout" from="Validador" to="." method="_on_Validador_timeout"]
